|
Quick Lists
|
|
Bug ID:
|
6812428
|
|
Votes
|
0
|
|
Synopsis
|
G1: Error: assert(!ret || obj_in_cs(obj),"sanity")
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b03),
7(b51) (Bug ID:2174475)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
6484956
,
6817608
|
|
Submit Date
|
03-MAR-2009
|
|
Description
|
While testing I came across this failure:
4.302: [GC pause (young)# To suppress the following error report, specify this a
rgument
# after -XX: or in .hotspotrc: SuppressErrorAt=/g1CollectedHeap.hpp:423
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/java/east/u2/ap31282/hotspot-g1-tmp/src/share/vm/gc_implementation/g1/g1CollectedHeap.hpp:423), pid=18586, tid=8
# Error: assert(!ret || obj_in_cs(obj),"sanity")
#
# JRE version: 6.0_04-b12
# Java VM: OpenJDK Server VM (15.0-b01-internal-fastdebug mixed mode solaris-sparc )
# An error report file with more information is saved as:
# /java/east/u2/ap31282/gc_test_suite_sparc/specjvm98/hs_err_pid18586.log
#
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
Posted Date : 2009-03-03 16:00:20.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The problem is caused by my fix for the evacuation pause efficiency improvements (6484956). When I set up the byte vector which denotes which regions are in the collection set (the vector for the fast cset test), I used n_regions() to decide its size. However, the number of regions can actually be increased during the GC. If this happens and we try to look up into the fast cset test vector, we'll fall off its edge and read junk.
Posted Date : 2009-03-03 16:20:35.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/ae1579717a57
Posted Date : 2009-03-08 05:49:11.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |