6812428: G1: Error: assert(ret || obj_in_cs(obj),"sanity")

The length of the fast cset test vector is decided at the beginning of a GC, but more regions can be added during the GC. The simple fix is to set the length of the fast cset test vector to the max.

Reviewed-by: iveresov